--- a/index.html
+++ b/index.html
@@ -4,48 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benchmark Epicode</title>
-    <link rel="stylesheet" href="welcome-style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100..900&family=Prata&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- link css -->
+    <link rel="stylesheet" href="welcome-style.css" />
+    <!-- link font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <div id="welcome-page">
+      <!-- first title -->
+      <nav>
+        <img id="logo" src="./asset/epicode_logo.png" alt="Logo epicode" />
+      </nav>
+      <div id="welcome-container">
+        <h1 id="welcome-title">Welcome to your exam</h1>
+      </div>
+      <!-- second title plus paragraph-->
 
-<div id="welcome-page"> 
-  <nav><img id="logo" src="./asset/epicode_logo.png" alt="Logo epicode"> 
-  
-  </nav>
-<div id="welcome-container">
-  <h1 id="welcome-title">Welcome to <span>your exam</span></h1></div>
+      <h2 id="sub-title">Instructions</h2>
 
-  <h3 id="sub-title">Instructions</h3>
+      <p>
+        We don't expect most engineers to know the answers to all of these
+        <br />
+        questions, so don't worry if you're unsure of a few of them.
+      </p>
+      <!-- unordered list -->
 
-  <p>We don't expect most engineers to know the answers to all of these questions, so don't worry if you're unsure of a few of them.
-  </p>
+      <ul>
+        <li>
+          Each question is <span>timed</span> and can only be
+          <span>answered once</span>.
+        </li>
 
-  <ul>
-    <li>
-      Each question is <span>timed</span> and can only be <span>answered once</span>.
-    </li>
+        <li>
+          hanging browser tab or opening other windows will
+          <span>invalidate the question</span>.
+        </li>
 
-    <li>
-      hanging browser tab or opening other windows will <span>invalidate the question</span>.
-    </li>
+        <li>This exam will take approx. <span>0-5 minutes</span>.</li>
+      </ul>
+      <!-- checkbox and button -->
 
-    <li>
-      This exam will take approx. <span>0-5 minutes</span>.
-    </li>
+      <footer>
+        <input type="checkbox" name="" id="" required />
+        <span>I promise to answer myself whithout help from anyone</span>
 
-  </ul>
-
-<footer>
-
-  <input type="checkbox" name="" id="" required> <span>I promise to answer myself whithout help from anyone</span>
-
-  <button id="proceed-btn">PROCEED</button>
-
-</footer>
-</div>
-
+        <a href="questions.html">PROCEED</a>
+      </footer>
+    </div>
   </body>
 </html>
