modifiche css e html pagina questions

--- a/questions.html
+++ b/questions.html
@@ -14,18 +14,19 @@
     <!-- question and buttons -->
 
     <div id="questions"><h1>ci sara la domanda</h1></div>
-    <div id="first-btns">
+    <div id="btns">
       <button class="btn">true</button>
       <button class="btn">false</button>
-    </div>
-    <div id="second-btns">
       <button class="btn">well done</button>
       <button class="btn">IDK</button>
     </div>
+
 
     <!-- question counting -->
     <footer>
       <h3>QUESTION 1/10</h3>
     </footer>
   </body>
+
+  <script src="script.js"></script>
 </html>
