--- a/questions.html
+++ b/questions.html
@@ -12,20 +12,15 @@
       <img id="logo" src="./asset/epicode_logo.png" alt="" />
     </nav>
     <!-- question and buttons -->
-
-    <div id="questions"><h1>ci sara la domanda</h1></div>
-    <div id="btns">
-      <button class="btn">true</button>
-      <button class="btn">false</button>
-      <button class="btn">well done</button>
-      <button class="btn">IDK</button>
-    </div>
-
+    <main id="">
+      <div id="question-container"><h1>ci sara la domanda</h1></div>
+      <div id="container-btns"></div>
+      <footer>
+        <h3>QUESTION 1 <span>/10</span></h3>
+      </footer>
+    </main>
 
     <!-- question counting -->
-    <footer>
-      <h3>QUESTION 1/10</h3>
-    </footer>
   </body>
 
   <script src="script.js"></script>
