Migliorie pagina welcome e strutta del codice js relativo alla pagina welcome

--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
       <!-- checkbox and button -->
 
       <footer>
-        <input type="checkbox" name="" id="" required />
-        <span>I promise to answer myself whithout help from anyone</span>
+        <input type="checkbox" id="checkbox" required />
+        <span>I promise to answer myself without help from anyone</span>
+      
+        <a href="questions.html" id="proceedButton" class="disabled" onclick="return false;">PROCEED</a>
 
-        <a href="questions.html">PROCEED</a>
       </footer>
     </div>
   </body>
-</html>
+<script src="welcome-script.js"></script></html>
