--- a/questions.html
+++ b/questions.html
@@ -10,10 +10,13 @@
     <!-- logo -->
     <nav>
       <img id="logo" src="./asset/epicode_logo.png" alt="" />
+      <div class="container-timer">
+        <h1 class="timer" id="timer"></h1>
+      </div>
     </nav>
     <!-- question and buttons -->
     <main id="">
-      <div id="question-container"><h1>ci sara la domanda</h1></div>
+      <div id="question-container"><!-- <h1>ci sara la domanda</h1> --></div>
       <div id="container-btns"></div>
       <footer>
         <h3>QUESTION 1 <span>/10</span></h3>
