modifiche css welcome, migliorie varie html e js question

--- a/questions.html
+++ b/questions.html
@@ -14,17 +14,18 @@
         <h1 class="timer" id="timer"></h1>
       </div>
     </nav>
+
     <!-- question and buttons -->
-    <main id="">
-      <div id="question-container"><!-- <h1>ci sara la domanda</h1> --></div>
+    <main>
+      <div id="question-container"></div>
       <div id="container-btns"></div>
+
+      <!-- Contatore delle domande -->
       <footer>
-        <h3>QUESTION 1 <span>/10</span></h3>
+        <h3 id="question-counter"> <span>/10</span></h3>
       </footer>
     </main>
 
-    <!-- question counting -->
+    <script src="script.js"></script>
   </body>
-
-  <script src="script.js"></script>
 </html>
