--- a/index.html
+++ b/index.html
@@ -58,4 +58,5 @@
       </footer>
     </div>
   </body>
-<script src="welcome-script.js"></script></html>
+<script src="welcome-script.js"></script>
+</html>
